@startuml
skinparam class {
BackgroundColor #white
ArrowColor #black
BorderColor #black
}

class Project{
    -code
    -name
    -description
    -startDate
    -endDate
    -sprintDuration
    -numberOfPlannedSprints
    -budget
    -projectStatus
    -businessSector
}

class Typology{
    -typology description
}

class KpiReport{
    -schedlePerformanceIndex
    -costPerformanceIndex
}

class Customer{
    -name
}

class ProjectSprintList{
    -projectSprints
 }

class User{
    -name
    -function
    -email
    -password
    -photo
}

class Resource{
    -user
    -project
    -startDate
    -endDate
    -costPerHour
    -percentageOfAllocation
}

class ProductBacklog{
    -productBacklog
}

Typology "1" --> "1" Project : is part of
KpiReport "1...*" ---> "1" Project : is generated by
Customer "1" --> "1...*" Project : owns
ProjectSprintList "1" ---> "1" Project : is part of
ProductBacklog "1" --> "1" Project : is part of
Project "1...*" --> "1" User : is created by
Resource "1" --> "1" User : is a
Resource " 1.* PM" ----- "1" Project
Resource "        1.* SM" --- "1" Project
Resource " 1.* PO" --- "1" Project
Resource "     1.* DEV" --- "1" Project

@enduml